--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@ permalink: /
 <!DOCTYPE html>
 <html>
     <head>
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-4994249264553617",
+    enable_page_level_ads: true
+  });
+</script>
+        
         <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-122706432-1"></script>
 <script>
